--- a/app/assets/stylesheets/_single.scss
+++ b/app/assets/stylesheets/_single.scss
@@ -44,14 +44,16 @@
           line-height: 1.5;
           font-size: 13px;
           }
-          &__drop-box {
+          label {
+            color: black;
+            font-weight: bold;
             display: block;
             width: 620px;
             position: relative;
             min-height: 162px;
             background: #f5f5f5;
             border: 1px dashed #ccc;
-            font-size: 0;
+            font-size: 14px;
             text-align: center;
             -webkit-transition: -webkit-box-shadow ease-out .3s;
             transition: -webkit-box-shadow ease-out .3s;
@@ -61,14 +63,11 @@
             float: right;
             margin-left: 2%;
             margin-top: 16px;
-            &__text{
-              text-align: center;
-              display: block;
-              margin-left: 0;
-              padding: 40px;
-              font-size: 14px;
-              font-weight: bold;
-            }
+          }
+          .sell-drop-file{
+            position: absolute;
+            top: 60px;
+            left: 150px;
           }
         }
       }
@@ -124,14 +123,17 @@
       }
       &__price__form__right{
         line-height: 48px;
-        width: 50%;
         float: right;
         text-align: right;
+        font-size: 12px;
+        font-weight: 100;
       }
       &__price__text{
         padding: 24px 0;
         font-weight: 100;
         border-top: 1px solid #ccc;
+        display: flow-root;
+        
         .li-left{
           float: left;
         }
@@ -143,6 +145,7 @@
         padding: 24px 0;
         border-top: 1px solid #ccc;
         font-size: 16px;
+        display: flow-root;
         .li-left{
           float: left;
         }
@@ -292,16 +295,27 @@
     line-height: 1.5;
     font-size: 16px;
     width: 50%;
-    margin: 8px 0 0;
+    margin: 0 0 0 5px;
+    text-align: right
   }
   select{
+    background-color: rgba(0,0,0,0);
+    z-index: 100;
+    text-indent: 20px;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
+    width: 100%;
+    line-height: 48px;
+    background-color: #fff;
+    font-size: inherit;
     }
     ::-ms-expand {
     display: none;
-      }
+    }
+    select option{
+      text-align: center
+    }
   .select-wrap{
     position: relative;
   }
