--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -4,31 +4,34 @@
       = link_to "/" do
         = image_tag src="//www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?3791839826", alt: '', height: '', width: '', class: 'singel-image'
   .single__main
-    .single__main__contents
-      %h2.single-head 商品の情報を入力
-      .sell__form
-        .sell__form__box
-          %h3.sell__form__box__head
-            出品画像
-            %span.form__box__color 必須
-          %p 最大10枚までアップロードできます
-          .sell__form__box__image
-            .sell__form__box__drop-box
-              %input.sell-drop-file{multiple: "multiple", name: "image1", style: "display: none;", type: "file"}/
-              .sell__form__box__drop-box__text
-                %p ドラッグアンドドロップ
-                %p またはクリックしてファイルをアップロード
+    = form_with model: @item, local: true  do |form|
+      .single__main__contents
+        %h2.single-head 商品の情報を入力
+        .sell__form
+          .sell__form__box
+            %h3.sell__form__box__head
+              出品画像
+              %span.form__box__color 必須
+            %p 最大10枚までアップロードできます
+            .sell__form__box__image
+            %label(for="file_photo")
+              = form.file_field :images, multiple: true, type: "file", class: "sell__form__box__drop-box", id:"file_photo", style: "display:none;", value: "ドラッグアンドドロップ またはクリックしてファイルをアップロード"
+              .sell-drop-file
+                .sell__form__box__drop-box__text
+                  ドラッグアンドドロップ
+                  %br/
+                  またはクリックしてファイルをアップロード
         .sell__content
           .sell__content__name
             商品名
             %span.form-require 必須
             %div
-              %input.input-default{placeholder: "商品名（必須 40文字まで)", value: ""}/
+              = form.text_area :name, placeholder: "商品名（必須 40文字まで)", class: "input-default"
           .sell__content__form
             %label
               商品の説明
               %span.form-require 必須
-            %textarea.textarea-default{placeholder: "商品の説明（必須 1,000文字以内）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。"}
+              = form.text_area :text, placeholder: "商品の説明（必須 1,000文字以内）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。", class: "textarea-default"
         .sell__group.clearfix
           %h3.sell__group__head 商品の詳細
           .sell__group__box
@@ -39,122 +42,60 @@
               %div
                 .select-wrap
                   %i.fa.fa-angle-down
-                  %select.select-default
-                    %option{value: ""} ---
-                    %option{value: "1"} レディース
-                    %option{value: "2"} メンズ
-                    %option{value: "3"} ベビー・キッズ
+                  .serlect-default
+                    = form.select :category_id, [['---', ""],['レディース', 1],['メンズ', 2],['ベビー・キッズ', 3]],{class: ""}
                 .select-wrap
                   %i.fa.fa-angle-down
-                  %select.select-default
-                    %option{value: ""} ---
-                    %option{value: "30"} トップス
-                    %option{value: "31"} ジャケット/アウター
-                    %option{value: "33"} パンツ
+                  .serlect-default
+                    = form.select :category_id, [['---', ""],['トップス', 4],['ジャケット/アウター', 5],['パンツ', 6]],{class: ""}
                 .select-wrap
                   %i.fa.fa-angle-down
-                  %select.select-default
-                    %option{value: ""} ---
-                    %option{value: "34"} Tシャツ
-                    %option{value: "35"} パーカー
-                    %option{value: "36"} ニット
+                  .serlect-default
+                    = form.select :category_id, [['---', ""],['Tシャツ', 7],['パーカー', 8],['ニット', 9]],{class: ""}
+                .select-wrap
+                  .select-default
+                    = form.text_area :brand_id, placeholder: "例) シャネル", class: "input-default"
             .sell__group__box__sutetas
               %label
                 商品の状態
                 %span.form-require 必須
               .select-wrap
-                %i.fa.fa-angle-down
-                %select.select-default
-                  %option{value: ""} ---
-                  %option{value: "1"} 新品、未使用
-                  %option{value: "2"} 未使用に近い
-                  %option{value: "3"} 目立った傷や汚れなし
-                  %option{value: "4"} やや傷や汚れあり
-                  %option{value: "5"} 傷や汚れあり
-                  %option{value: "6"} 全体的に状態が悪い
+                .serlect-default
+                  %i.fa.fa-angle-down
+                  = form.select :status, [['  ---', ""],['新品、未使用', 1],['未使用に近い', 2],['目立った傷や汚れなし', 3],['やや傷や汚れあり', 4],['未使用に近い', 5],['全体的に状態が悪い', 6]],{class: ""}
         .sell__group.clearfix
-          %h3.sell__group__head 配送について
-          .sell__group__question
-            = link_to '?','/'
-          .sell__group__box
-            .sell__group__box-category
-              %label
-                配送料の負担
-                %span.form-require 必須
-              .select-wrap
-                %i.fa.fa-angle-down
-                %select.select-default
-                  %option{value: ""} ---
-                  %option{value: "2"} 送料込み(出品者負担)
-                  %option{value: "1"} 着払い(購入者負担)
-            .sell__group__box__sutetas
-              %label
-                発送元の地域
-                %span.form-require 必須
-              .select-wrap
-                %i.fa.fa-angle-down
-                %select.select-default
-                  %option{value: ""} ---
-                  %option{value: "1"} 北海道
-                  %option{value: "2"} 青森県
-                  %option{value: "3"} 岩手県
-                  %option{value: "4"} 宮城県
-                  %option{value: "5"} 秋田県
-                  %option{value: "6"} 山形県
-                  %option{value: "7"} 福島県
-                  %option{value: "8"} 茨城県
-                  %option{value: "9"} 栃木県
-                  %option{value: "10"} 群馬県
-                  %option{value: "11"} 埼玉県
-                  %option{value: "12"} 千葉県
-                  %option{value: "13"} 東京都
-                  %option{value: "14"} 神奈川県
-                  %option{value: "15"} 新潟県
-                  %option{value: "16"} 富山県
-                  %option{value: "17"} 石川県
-                  %option{value: "18"} 福井県
-                  %option{value: "19"} 山梨県
-                  %option{value: "20"} 長野県
-                  %option{value: "21"} 岐阜県
-                  %option{value: "22"} 静岡県
-                  %option{value: "23"} 愛知県
-                  %option{value: "24"} 三重県
-                  %option{value: "25"} 滋賀県
-                  %option{value: "26"} 京都府
-                  %option{value: "27"} 大阪府
-                  %option{value: "28"} 兵庫県
-                  %option{value: "29"} 奈良県
-                  %option{value: "30"} 和歌山県
-                  %option{value: "31"} 鳥取県
-                  %option{value: "32"} 島根県
-                  %option{value: "33"} 岡山県
-                  %option{value: "34"} 広島県
-                  %option{value: "35"} 山口県
-                  %option{value: "36"} 徳島県
-                  %option{value: "37"} 香川県
-                  %option{value: "38"} 愛媛県
-                  %option{value: "39"} 高知県
-                  %option{value: "40"} 福岡県
-                  %option{value: "41"} 佐賀県
-                  %option{value: "42"} 長崎県
-                  %option{value: "43"} 熊本県
-                  %option{value: "44"} 大分県
-                  %option{value: "45"} 宮崎県
-                  %option{value: "46"} 鹿児島県
-                  %option{value: "47"} 沖縄県
-                  %option{value: "99"} 未定
-            .sell__group__box__sutetas
-              %label
-                発送までの日数
-                %span.form-require 必須
-              .select-wrap
-                %i.fa.fa-angle-down
-                %select.select-default
-                  %option{value: ""} ---
-                  %option{value: "1"} 1~2日で発送
-                  %option{value: "2"} 2~3日で発送
-                  %option{value: "3"} 4~7日で発送
-        .sell__group.clearfix
+          = form.fields_for :delivary do |delivary|
+            %h3.sell__group__head 配送について
+            .sell__group__question
+              = link_to '?','/'
+            .sell__group__box
+              .sell__group__box-category
+                %label
+                  配送料の負担
+                  %span.form-require 必須
+
+                .select-wrap
+                  .serlect-default
+                    %i.fa.fa-angle-down
+                    = delivary.select :price, [['---', ""],['送料込み(出品者負担)', 1],['着払い(購入者負担)', 2]],{class: ""}
+              .sell__group__box__sutetas
+                %label
+                  発送元の地域
+                  %span.form-require 必須
+                .select-wrap
+                  .serlect-default
+                    %i.fa.fa-angle-down
+                    = delivary.select :area, [['---', ""],['ブラジル', 1],['ハワイ',2],['大阪',3]]
+              .sell__group__box__sutetas
+                %label
+                  発送までの日数
+                  %span.form-require 必須
+                .select-wrap
+                  .serlect-default
+                    %i.fa.fa-angle-down
+                    = delivary.select :delivary_day, [['---', ""], ['1~2日で発送',1],['2~3日で発送', 2],['4~7日で発送', 3]]
+          .sell__group.clearfix
+        = form.fields_for :item do |item|
           %h3.sell__group__head 販売価格(300〜9,999,999)
           .sell__group__question
             = link_to '?','/'
@@ -165,7 +106,7 @@
                 %span.form-require 必須
                 .sell__price__form__right
                   ¥
-                  %input.input-price{placeholder:  "例）300", value: ""}/
+                  = item.text_field :price, placeholder:  "例）300", class: "input-price"
               %li.sell__price__text
                 .li-left
                   販売手数料 (10%)
@@ -173,26 +114,27 @@
               %li.sell__price__bold
                 .li-left 販売利益
                 .li-right -
-        .modal
-          .modal-inner
-        .sell__btn__box
-          .sell__btn__box__info
-            %p
-            = link_to '禁止されている出品','/' 
-            %nobr 、
-            = link_to '行為', '/'
-            %nobr を必ずご確認ください。
-            %p
-              またブランド品でシリアルナンバー等がある場合はご記載ください。
-            = link_to '偽ブランドの販売', '/'
-            %nobr は犯罪であり処罰される可能性があります。
-            %p
-              また、出品をもちまして
-            = link_to '加盟店規約', '/'
-            %nobr に同意したことになります。
-          %button.sell__btn__box__default.btn-red{type: "submit"}
-            出品する
-          %a.sell__btn__box__default__gray.btn-gray もどる
+          .modal
+            .modal-inner
+          .sell__btn__box
+            .sell__btn__box__info
+              %p
+              = link_to '禁止されている出品','/' 
+              %nobr 、
+              = link_to '行為', '/'
+              %nobr を必ずご確認ください。
+              %p
+                またブランド品でシリアルナンバー等がある場合はご記載ください。
+              = link_to '偽ブランドの販売', '/'
+              %nobr は犯罪であり処罰される可能性があります。
+              %p
+                また、出品をもちまして
+              = link_to '加盟店規約', '/'
+              %nobr に同意したことになります。
+            .sell__btn__box__default.btn-red
+              出品する
+              = form.submit class: "btn-red", style: ""
+            %a.sell__btn__box__default__gray.btn-gray もどる
   .single__footer
     %ul.single__footer__text
       %li
