--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -9,6 +9,8 @@ header a:hover{
 header{
   width: 100%;
   height:100px;
+  background-color:white;
+  box-shadow: 0 3px 3px 0 rgba(122, 91, 91, 0.16);
 }
 
 .header__inner{
