--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -11,7 +11,7 @@
     text-align: center;
     font-weight: bold;
   }
-  &__contents {
+  &__content{
   width: 940px;
   margin: 0 auto;
   }
@@ -49,11 +49,13 @@
     &__body {
       padding: 16px;
       height: 110px;
+      box-sizing:border-box;
       .items-box{
         margin: 8px 0 0;
       }
       .items-price{
-        font-size: 17px;
+        font-size: 16px;
+        font-weight: bold;
       }
       .items-name{
         overflow: hidden;
