--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -59,12 +59,9 @@
           width:300px;
           font-size:0;
           &__dot{
-            width: 60px;
             height: 60px;
             position: relative;
             max-height: none;
-            overflow: hidden;
-            opacity: .4;
             cursor: pointer;
             height:60px;
             display: inline-block;
@@ -160,10 +157,105 @@
   }
 }
 
-.item-details-dot-image{
+.item-details-dot-image1{
   width: 60px;
   height:60px;
+  opacity: .4;
+  // position: absolute;
+  // bottom:0px;
+  // left:0px;
+  // transition: all 0.7s;
+  // z-index: 5;
 }
+.item-details-dot-image1:hover{
+  width: 300px;
+  height:370px;
+  position: absolute;
+  z-index: 10;
+  bottom:0px;
+  left:0px;
+  opacity: 1;
+  transition: all 0.7s;
+}
+.item-details-dot-image2{
+  width: 60px;
+  height:60px;
+  opacity: .4;
+  position: absolute;
+  z-index: 5;
+  bottom:0px;
+  left:60px;
+  transition: all 0.7s;
+}
+.item-details-dot-image2:hover{
+  width: 300px;
+  height:370px;
+  position: absolute;;
+  z-index: 10;
+  bottom:0px;
+  left:0px;
+  opacity: 1;
+  transition: all 0.7s;
+}
+.item-details-dot-image3{
+  width: 60px;
+  height:60px;
+  opacity: .4;
+  position: absolute;
+  bottom:0px;
+  left:120px;
+  transition: all 0.7s;
+  z-index: 5;
+}
+.item-details-dot-image3:hover{
+  width: 300px;
+  height:370px;
+  position: absolute;;
+  z-index: 10;
+  bottom:0px;
+  left:0px;
+  opacity: 1;
+  transition: all 0.7s;
+}.item-details-dot-image4{
+  width: 60px;
+  height:60px;
+  opacity: .4;
+  position: absolute;
+  bottom:0px;
+  left:180px;
+  transition: all 0.7s;
+  z-index: 5;
+}
+.item-details-dot-image4:hover{
+  width: 300px;
+  height:370px;
+  position: absolute;;
+  z-index: 10;
+  bottom:0px;
+  left:0px;
+  opacity: 10;
+  transition: all 0.7s;
+}.item-details-dot-image5{
+  width: 60px;
+  height:60px;
+  position: absolute;
+  bottom:0px;
+  left:240px;
+  opacity: .4;
+  transition: all 0.7s;
+  z-index: 5;
+}
+.item-details-dot-image5:hover{
+  width: 300px;
+  height:370px;
+  position: absolute;;
+  z-index: 10;
+  bottom:0px;
+  left:0px;
+  opacity: 1;
+  transition: all 0.7s;
+}
+
 
 .item-details__main__table t-body{
   margin: 0;
@@ -287,6 +379,7 @@
 .items-details-profile{
   width: 700px;
   margin: 0 auto;
+  overflow:auto; 
   &__user{
     &__head{
       font-size: 22px;
@@ -294,9 +387,10 @@
       line-height: 1.4;
     }
     &__content{
-      width: auto;
+      width:233px;
       margin: 0 auto;
       overflow:auto;
+      float: right; 
       &__box{
         background-color:white;
         width: 220px;
