--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -12,35 +12,14 @@
             .item-details__photo__main__outer__stage{style: "left: 0px; width: 1500px;"}
               .item-details__photo__main__outer__stage__item{style: "width: 300px;"}
                 .item-details__photo__main__outer__stage__item__inner
-                  = image_tag @item.images.first , class: 'item-details-outer-image', style:"opacity: 1;"
-          .item-details__photo__main__dots
-            .item-details__photo__main__dots__dot
-              %span
-              .item-details__photo__main__dots__dot__inner
-                =image_tag = image_tag @item.images.last ,class: 'item-details-dot-image'
-            .item-details__photo__main__dots__dot
-              %span
-              .item-details__photo__main__dots__dot__inner
-                =image_tag 'https://static.mercdn.net/item/detail/orig/photos/m30752012921_1.jpg?1565083129',class: 'item-details-dot-image'
-            .item-details__photo__main__dots__dot
-              %span
-              .item-details__photo__main__dots__dot__inner
-                =image_tag 'https://static.mercdn.net/item/detail/orig/photos/m30752012921_1.jpg?1565083129',class: 'item-details-dot-image'
-            .item-details__photo__main__dots__dot
-              %span
-              .item-details__photo__main__dots__dot__inner
-                =image_tag 'https://static.mercdn.net/item/detail/orig/photos/m30752012921_1.jpg?1565083129',class: 'item-details-dot-image'
-            .item-details__photo__main__dots__dot
-              %span
-              .item-details__photo__main__dots__dot__inner
-                =image_tag 'https://static.mercdn.net/item/detail/orig/photos/m30752012921_1.jpg?1565083129',class: 'item-details-dot-image'
-
+                  = image_tag @item.images.first , class: 'item-details-outer-image'
+          = render 'layouts/show-image-hover'
       %table.item-details__main__table
         %tbody
           %tr
             %th 出品者
             %td
-              =link_to @item.seller_name
+              =link_to @user.nickname
               %div
                 .item-details__main__table__ratings
                   %i.fas.fa-laugh
@@ -54,12 +33,12 @@
           %tr
             %th カテゴリー
             %td
-              =link_to "https://www.mercari.com/jp/category/1/" do
+              =link_to "/" do
                 %div category-name1
-              =link_to "https://www.mercari.com/jp/category/15/" do
+              =link_to "/" do
                 %div.item-details__main__table__category__sub
                   %i.fas.fa-angle-right category-name2
-              =link_to "https://www.mercari.com/jp/category/173/" do
+              =link_to "/" do
                 %div.item-details__main__table__category__sub__sub
                   %i.fas.fa-angle-right category-name3
           %tr
@@ -87,11 +66,11 @@
 
     .item-details__price-box
       %span.item-details__price-box__price
-        = "#{@item.price}"
+        = "¥#{@item.price}"
       %span.item-details__price-box__tax (税込)
       %span.item-details__price-box__fee 送料込み
 
-    =link_to "購入画面に進む", "https://www.mercari.com/jp/transaction/buy/m30752012921/?_s=U2FsdGVkX1-h3_l9pfk7YiafMqbKWOLV7eReyQtFEE65v9Z_6Rp5rrUWj_CL2ttxblNbd0LngQ_oRCJ4IFts40V2G5IrgXQ3rqYZlfjONZFJ84gfsIcfL-V2ANCtTERH", id:"item-details-buy-btn"
+    =link_to "購入画面に進む", "/", id:"item-details-buy-btn"
           
     .item-details__description
       %p.item-details__description__inner
@@ -108,19 +87,19 @@
           %span 不適切な商品の報告
 
       .item-details__buttons__right
-        =link_to "https://www.mercari.com/jp/safe/description/", target:"_blank" do
+        =link_to "/" do
           %i.fas.fa-lock
           %span あんしん・あんぜんへの取り組み
   
 
   %ul.item-details-nav-link
     %li.item-details-nav-link__prev
-      =link_to "https://item.mercari.com/jp/m99078939100/" do
+      =link_to "/" do
         %i.fas.fa-angle-left
-        【値下げ】【新品未使用】ATTENTION刺繍入り黄色トップス ブラウス
+        next
     %li.item-details-nav-link__next
-      =link_to "https://item.mercari.com/jp/m13768809092/" do
-        ワンピース
+      =link_to "/" do
+        back
         %i.fas.fa-angle-right
 
 
@@ -140,114 +119,35 @@
   .items-details-profile
     %section.items-details-profile__user
       %h2.items-details-profile__user__head
-        =link_to "ユーザーのその他の出品","https://www.mercari.com/jp/u/145861833/" 
-      
-      .items-details-profile__user__content
-        %section.items-details-profile__user__content__box
-          =link_to "https://item.mercari.com/jp/m38518419292/" do
-            %figure.items-details-profile__user__content__box__photo
-              =image_tag "https://static.mercdn.net/thumb/photos/m38518419292_1.jpg?1565255193",  alt:"ジャージ風 プリーツワイドパンツ", id:"items-details-lazyloaded"
-            .items-details-profile__user__content__box__body
-              %h3.items-details-profile__user__content__box__body__name ジャージ風 プリーツワイドパンツ
-              .items-details-profile__user__content__box__body__num
-                .items-details-profile__user__content__box__body__num__price ¥ 3,000
-        %section.items-details-profile__user__content__box
-          =link_to "https://item.mercari.com/jp/m38518419292/" do
-            %figure.items-details-profile__user__content__box__photo
-              =image_tag "https://static.mercdn.net/thumb/photos/m38518419292_1.jpg?1565255193",  alt:"ジャージ風 プリーツワイドパンツ", id:"items-details-lazyloaded"
-            .items-details-profile__user__content__box__body
-              %h3.items-details-profile__user__content__box__body__name ジャージ風 プリーツワイドパンツ
-              .items-details-profile__user__content__box__body__num
-                .items-details-profile__user__content__box__body__num__price ¥ 3,000
-        %section.items-details-profile__user__content__box
-          =link_to "https://item.mercari.com/jp/m38518419292/" do
-            %figure.items-details-profile__user__content__box__photo
-              =image_tag "https://static.mercdn.net/thumb/photos/m38518419292_1.jpg?1565255193",  alt:"ジャージ風 プリーツワイドパンツ", id:"items-details-lazyloaded"
-            .items-details-profile__user__content__box__body
-              %h3.items-details-profile__user__content__box__body__name ジャージ風 プリーツワイドパンツ
-              .items-details-profile__user__content__box__body__num
-                .items-details-profile__user__content__box__body__num__price ¥ 3,000
-        %section.items-details-profile__user__content__box
-          =link_to "https://item.mercari.com/jp/m38518419292/" do
-            %figure.items-details-profile__user__content__box__photo
-              =image_tag "https://static.mercdn.net/thumb/photos/m38518419292_1.jpg?1565255193",  alt:"ジャージ風 プリーツワイドパンツ", id:"items-details-lazyloaded"
-            .items-details-profile__user__content__box__body
-              %h3.items-details-profile__user__content__box__body__name ジャージ風 プリーツワイドパンツ
-              .items-details-profile__user__content__box__body__num
-                .items-details-profile__user__content__box__body__num__price ¥ 3,000
-        %section.items-details-profile__user__content__box
-          =link_to "https://item.mercari.com/jp/m38518419292/" do
-            %figure.items-details-profile__user__content__box__photo
-              =image_tag "https://static.mercdn.net/thumb/photos/m38518419292_1.jpg?1565255193",  alt:"ジャージ風 プリーツワイドパンツ", id:"items-details-lazyloaded"
-            .items-details-profile__user__content__box__body
-              %h3.items-details-profile__user__content__box__body__name ジャージ風 プリーツワイドパンツ
-              .items-details-profile__user__content__box__body__num
-                .items-details-profile__user__content__box__body__num__price ¥ 3,000
-        %section.items-details-profile__user__content__box
-          =link_to "https://item.mercari.com/jp/m38518419292/" do
-            %figure.items-details-profile__user__content__box__photo
-              =image_tag "https://static.mercdn.net/thumb/photos/m38518419292_1.jpg?1565255193",  alt:"ジャージ風 プリーツワイドパンツ", id:"items-details-lazyloaded"
-            .items-details-profile__user__content__box__body
-              %h3.items-details-profile__user__content__box__body__name ジャージ風 プリーツワイドパンツ
-              .items-details-profile__user__content__box__body__num
-                .items-details-profile__user__content__box__body__num__price ¥ 3,000
-
+        =link_to "#{@user.nickname}のその他の出品","/" 
+      - @user_item.reverse_each do |item|
+        .items-details-profile__user__content
+          %section.items-details-profile__user__content__box
+            =link_to "/" do
+              %figure.items-details-profile__user__content__box__photo
+                =image_tag item.images.first, id:"items-details-lazyloaded"
+              .items-details-profile__user__content__box__body
+                %h3.items-details-profile__user__content__box__body__name
+                  = item.name 
+                .items-details-profile__user__content__box__body__num
+                  .items-details-profile__user__content__box__body__num__price
+                    = "¥#{item.price}"
   .items-details-profile
     %section.items-details-profile__user
       %h2.items-details-profile__user__head
-        =link_to "関連商品その他の出品","https://www.mercari.com/jp/u/145861833/" 
-      
-      .items-details-profile__user__content
-        %section.items-details-profile__user__content__box
-          =link_to "https://item.mercari.com/jp/m38518419292/" do
-            %figure.items-details-profile__user__content__box__photo
-              =image_tag "https://static.mercdn.net/thumb/photos/m38518419292_1.jpg?1565255193",  alt:"ジャージ風 プリーツワイドパンツ", id:"items-details-lazyloaded"
-            .items-details-profile__user__content__box__body
-              %h3.items-details-profile__user__content__box__body__name ジャージ風 プリーツワイドパンツ
-              .items-details-profile__user__content__box__body__num
-                .items-details-profile__user__content__box__body__num__price ¥ 3,000
-        %section.items-details-profile__user__content__box
-          =link_to "https://item.mercari.com/jp/m38518419292/" do
-            %figure.items-details-profile__user__content__box__photo
-              =image_tag "https://static.mercdn.net/thumb/photos/m38518419292_1.jpg?1565255193",  alt:"ジャージ風 プリーツワイドパンツ", id:"items-details-lazyloaded"
-            .items-details-profile__user__content__box__body
-              %h3.items-details-profile__user__content__box__body__name ジャージ風 プリーツワイドパンツ
-              .items-details-profile__user__content__box__body__num
-                .items-details-profile__user__content__box__body__num__price ¥ 3,000
-        %section.items-details-profile__user__content__box
-          =link_to "https://item.mercari.com/jp/m38518419292/" do
-            %figure.items-details-profile__user__content__box__photo
-              =image_tag "https://static.mercdn.net/thumb/photos/m38518419292_1.jpg?1565255193",  alt:"ジャージ風 プリーツワイドパンツ", id:"items-details-lazyloaded"
-            .items-details-profile__user__content__box__body
-              %h3.items-details-profile__user__content__box__body__name ジャージ風 プリーツワイドパンツ
-              .items-details-profile__user__content__box__body__num
-                .items-details-profile__user__content__box__body__num__price ¥ 3,000
-        %section.items-details-profile__user__content__box
-          =link_to "https://item.mercari.com/jp/m38518419292/" do
-            %figure.items-details-profile__user__content__box__photo
-              =image_tag "https://static.mercdn.net/thumb/photos/m38518419292_1.jpg?1565255193",  alt:"ジャージ風 プリーツワイドパンツ", id:"items-details-lazyloaded"
-            .items-details-profile__user__content__box__body
-              %h3.items-details-profile__user__content__box__body__name ジャージ風 プリーツワイドパンツ
-              .items-details-profile__user__content__box__body__num
-                .items-details-profile__user__content__box__body__num__price ¥ 3,000
-        %section.items-details-profile__user__content__box
-          =link_to "https://item.mercari.com/jp/m38518419292/" do
-            %figure.items-details-profile__user__content__box__photo
-              =image_tag "https://static.mercdn.net/thumb/photos/m38518419292_1.jpg?1565255193",  alt:"ジャージ風 プリーツワイドパンツ", id:"items-details-lazyloaded"
-            .items-details-profile__user__content__box__body
-              %h3.items-details-profile__user__content__box__body__name ジャージ風 プリーツワイドパンツ
-              .items-details-profile__user__content__box__body__num
-                .items-details-profile__user__content__box__body__num__price ¥ 3,000
-        %section.items-details-profile__user__content__box
-          =link_to "https://item.mercari.com/jp/m38518419292/" do
-            %figure.items-details-profile__user__content__box__photo
-              =image_tag "https://static.mercdn.net/thumb/photos/m38518419292_1.jpg?1565255193",  alt:"ジャージ風 プリーツワイドパンツ", id:"items-details-lazyloaded"
-            .items-details-profile__user__content__box__body
-              %h3.items-details-profile__user__content__box__body__name ジャージ風 プリーツワイドパンツ
-              .items-details-profile__user__content__box__body__num
-                .items-details-profile__user__content__box__body__num__price ¥ 3,000
-
-
+        =link_to "#{@user.nickname}のその他の出品","/" 
+      - @user_item.each do |item|
+        .items-details-profile__user__content
+          %section.items-details-profile__user__content__box
+            =link_to "/" do
+              %figure.items-details-profile__user__content__box__photo
+                =image_tag item.images.first, id:"items-details-lazyloaded"
+              .items-details-profile__user__content__box__body
+                %h3.items-details-profile__user__content__box__body__name
+                  = item.name 
+                .items-details-profile__user__content__box__body__num
+                  .items-details-profile__user__content__box__body__num__price
+                    = "¥#{item.price}"
 .banner
   = render "layouts/banner"
 .footer
