--- a/app/views/users/delivary_input.html.haml
+++ b/app/views/users/delivary_input.html.haml
@@ -65,5 +65,5 @@
               = f.text_field :phone, placeholder:'例) 090-1234-5678',class: "text_field"
             %li.main__conect__lists__list__btn
               = f.button '次へ進む',class: "submit_btn"
-            = link_to '仮','card_input'
+            = link_to '仮', new_card_path
   = render 'layouts/footer-registrations'
