--- a/app/views/layouts/_mypage-sidebar.html.haml
+++ b/app/views/layouts/_mypage-sidebar.html.haml
@@ -85,7 +85,7 @@
         メール/パスワード
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
-      = link_to"identification" do 
+      = link_to edit_address_input_path(current_user) do 
         本人情報
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
